update detail purchase
